<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center">

	<!-- Prename Field -->

	<EditText
		android:id="@+id_registrationscreen/prenameInput"
		android:inputType="textPersonName"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:hint="@string/prename" />

	<TextView
		android:id="@+id_registrationscreen/prenameHint"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:text="@string/registrationscreen_invalidInput"
		android:textColor="@color/red"
		android:visibility="gone" />

	<!-- Surname Field -->

	<EditText
		android:id="@+id_registrationscreen/surnameInput"
		android:inputType="textPersonName"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:hint="@string/surname" />

	<TextView
		android:id="@+id_registrationscreen/surnameHint"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:text="@string/registrationscreen_invalidInput"
		android:textColor="@color/red"
		android:visibility="gone" />

	<!--  Username Field -->

	<EditText
		android:id="@+id_registrationscreen/usernameInput"
		android:inputType="text"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:hint="@string/username" />

	<TextView
		android:id="@+id_registrationscreen/usernameHint"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:text="@string/registrationscreen_usernameUnavailable"
		android:textColor="@color/red"
		android:visibility="gone" />

	<!-- Password Field -->

	<EditText
		android:id="@+id_registrationscreen/passwordInput"
		android:inputType="textPassword"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:hint="@string/password" />

	<!-- Email Field -->

	<EditText
		android:id="@+id_registrationscreen/emailInput"
		android:inputType="textEmailAddress"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:hint="@string/email" />

	<TextView
		android:id="@+id_registrationscreen/emailHint"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:text="@string/registrationscreen_invalidEmail"
		android:textColor="@color/red"
		android:visibility="gone" />

	<!-- Registration Button -->

	<Button
		android:id="@+id_registrationscreen/registrationButton"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/register" />

</LinearLayout>