<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <ch.hsr.bieridee.android.layouts.DashboardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id_dashboardscreen/buttonBeerlist"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_button_beerlist"
            android:text="@string/dashboardscreen_beerlistButtonText" />

        <Button
            android:id="@+id_dashboardscreen/buttonTimeline"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_button_timeline"
            android:text="@string/dashboardscreen_timelineButtonText" />

        <Button
            android:id="@+id_dashboardscreen/buttonBreweries"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_button_breweries"
            android:text="@string/dashboardscreen_breweriesButtonText" />

	    <Button
		    android:id="@+id_dashboardscreen/buttonScan"
		    style="@style/DashboardButton"
		    android:drawableTop="@drawable/dashboard_button_scan"
		    android:text="@string/dashboardscreen_scanButtonText" />

        <Button
            android:id="@+id_dashboardscreen/buttonCreate"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_button_addbeer"
            android:text="@string/dashboardscreen_createButtonText" />

        <Button
            android:id="@+id_dashboardscreen/buttonRecommendations"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_button_recommendation"
            android:text="@string/dashboardscreen_recommendationButtonText" />
    </ch.hsr.bieridee.android.layouts.DashboardLayout>

</LinearLayout>