<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/beer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id_beercreate/beername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id_beercreate/brandAutocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus android:layout_width="wrap_content" />

    </AutoCompleteTextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/beertype" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id_beercreate/beertypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/beercreate_chooseBeertype" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/brewery" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id_beercreate/brewerySpinner"
            android:layout_weight="5" 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:prompt="@string/beercreate_chooseBrewery" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_weight="1" 
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@android:drawable/ic_input_add" />

    </LinearLayout>

    <Button
        android:id="@+id_beercreate/createButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beercreate_createbeer"
        android:minHeight="20dp"
        android:minWidth="200dp"/>

</LinearLayout>