<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/aboutscreen_imageDescription"
            android:src="@drawable/pixelbeer_large"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/aboutscreen_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/aboutscreen_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

</LinearLayout>
