<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id_brewerydetail/breweryPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:minWidth="120dp"
            android:src="@drawable/icon_pixelbeer" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id_brewerydetail/breweryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brewerydetail_breweryName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id_brewerydetail/brewerySize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brewerydetail_brewerySize" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/brewerydetail_descriptionTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id_brewerydetail/breweryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Brewery Description" />

</LinearLayout>